# bibirble

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  MIGRATION.md  README.md  build.ps1  build.sh
.github/: copilot-instructions.md
src/: BibirbleWindow.cpp  BibirbleWindow.h  BibleData.cpp  BibleData.h  GameRow.cpp  GameRow.h  loading_dialog.cpp  loading_dialog.h  main.cpp  menu_wireframe.cpp  menu_wireframe.h  wx_callafter_compat.h
tools/: sort.py
